# battery_bidding_strategy

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: Data.csv  curves.xlsx  python_test_may_2022.ipynb
data/example_short/: April_frequency.csv  Data.csv
instances/: test_short.yml
src/optimise_battery/: __init__.py  __main__.py
src/optimise_battery/battery_interaction_markets/: __init__.py  generic_interaction.py  market.py
src/optimise_battery/core/: __init__.py  create_inputs.py  simulate.py  trade.py
src/optimise_battery/core/battery_interaction_markets/: __init__.py  frr_interaction.py  generic_interaction.py
src/optimise_battery/core/curves/: __init__.py  bidding_curve.py
src/optimise_battery/curves/: bidding_curve.py
src/utils/: __init__.py  plot_results.py  utils.py
