[tool.poetry]
name = "battery_bidding_strategy"
version = "0.1.0"
description = ""
authors = ["Miguel Manuel de Villena <m.manueldevillena@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
PyYAML = "^6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
